--- a/style.css
+++ b/style.css
@@ -76,38 +76,34 @@ li img {
 li:hover img {
     display: block;
 }
-
-
-
-
-
-    .modal {
-      display: none;
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.5);
-      justify-content: center;
-      align-items: center;
-    }
-    .modal-content {
-      background: white;
-      padding: 20px;
-      border-radius: 8px;
-      max-width: 400px;
-    }
-    body.dark-mode .modal-content {
-      background: black;
-      color: white;
-    }
-    .close {
-      float: right;
-      cursor: pointer;
-      font-size: 40px;
-    }
-    #openModal {
-        background-color: rgb(25, 66, 138);
-        color: white;
-        padding: 8px;
-        font-size: 20px;
-    }
+.modal {
+    display: none;
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: rgba(0,0,0,0.5);
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+}
+.modal-content {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    max-width: 400px;
+}
+body.dark-mode .modal-content {
+    background: black;
+    color: white;
+}
+.close {
+    float: right;
+    cursor: pointer;
+    font-size: 40px;
+}
+#openModal {
+    background-color: rgb(25, 66, 138);
+    color: white;
+    padding: 8px;
+    font-size: 20px;
+}
